--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,25 @@
-.gradle
-**/build/
-!src/**/build/
+*.class
 
-# Ignore Gradle GUI config
-gradle-app.setting
-
-# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
-!gradle-wrapper.jar
-
-# Avoid ignore Gradle wrappper properties
-!gradle-wrapper.properties
-
-# Cache of project
-.gradletasknamecache
-
-# Eclipse Gradle plugin generated files
-# Eclipse Core
-.project
-# JDT-specific (Eclipse Java Development Tools)
+# Package Files #
+*.jar
+*.war
+*.ear
+*.iml
+*.ipr
+*.iws
+*.so
 .classpath
+.project
+.settings/
+.gradle/
+.idea/
+build/
+bin/
+out/
+gen/
+local.properties
+!gradle/
+
+*.keystore
+gradle.properties
+local.properties
